src/sass/components/_mobile_menu.scss
.menu__container
{ 
    
    @media screen and (max-width:1199px)
    {
        @include tablet
        {
            display: flex;
            flex-direction: row;
        }

        &.js-menu-container
        {

            transform: translateX(100%);
        }
        
        top: 100%;
        left: 0;

        overflow-y: scroll;
        background-color: $main-body-color;

        
        &.mobile-menu-open
        {
            display: flex;
            align-items: center;
            justify-content: space-between;
            flex-direction: column;
            position: absolute;
            white-space: unset;
            flex-direction: column;
            width: 100%;
            height: 503px;
            overflow: visible;
            overflow-y: scroll;
            z-index: 3;

            padding-top: 63px;
            padding-bottom: 63px;
            padding-left: 23px;
            padding-right: 22px;

            margin: 0;
            //box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.04), -2px 2px 2px rgba(0, 0, 0, 0.08), -1px 1px 1px rgba(0, 0, 0, 0.16);

        
            visibility: visible;
            opacity: 1;
            transform: translateX(0);
            transition-property: transform, opacity, visibility, clip-path, overflow, position;
            transition-duration: var(--main-duration-time);
            transition-timing-function: ease-in-out;
            transition-delay: var(--main-delay-time);

            @include tablet
            {
                &.mobile-menu-open >.btn-buy 
                {
                    display: none;
                }
            }
            
        }
        @media screen and (max-width: 480px)
        {
            padding-left: 10px;
            padding-right: 10px;
        }
    }
    /*@include desktop
    {
        display: flex;
        justify-content: space-between;
        width: 100%;
    }*/
}
.memu__navigtion
{   
    @media screen and (max-width: 1199px)
    {
        width: 100%;
    }
    &.is-open
    {
        @include tablet
        {
            display: flex;
        }
    }
    
}
.memu__list
{ 
    @media screen and (max-width: 1199px)
    {
        display: flex;
        flex-direction: column;
        gap: 32px;
        align-items: center;
        width: 100%;
    }
}

.menu__link
{
    @media screen and (max-width: 1199px)
    {
        font-weight: 700;
        font-size: 32px;
        line-height: 1.2;
    }
}
.menu-btn-buy
{
    @media screen and (max-width:768px)
    {
        margin: 0;
    }
}


.menu__svg
{
    fill: $main-text-color;
}
.is-none
{
    display: none;
}
//-------------------ident-js------------------------
.menu__second-btn
{
    display: none;
    @include tablet 
    {
        display: block;
        &.is-open
        {
            display: none;
        }
    }
    @include desktop
    {
        display: none;
    }
}
.menu__first-btn
{
    @include tablet
    {
        display: none;
        &.is-open
        {
            display: block;
        }
    }
    @include desktop
    {
        display: none;
    }
}

